example of align environment added in Chapter 4 code

--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,19 @@
+@article{tolles2020,
+    author = {Tolles, Juliana and Luong, ThaiBinh},
+    title = {Modeling Epidemics With Compartmental Models},
+    journal = {JAMA},
+    volume = {323},
+    number = {24},
+    pages = {2515-2516},
+    year = {2020},
+    month = {06},
+    abstract = {During epidemics, there is a critical need to understand both the likely number of infections and their time course to inform both public health and health care system responses. Approaches to forecasting the course of an epidemic vary and can include simulating the dynamics of disease transmission and recovery or empirical fitting of data trends. A common approach is to use epidemic compartmental models, such as the susceptible-infected-recovered (SIR) model.},
+    issn = {0098-7484},
+    doi = {10.1001/jama.2020.8420},
+    url = {https://doi.org/10.1001/jama.2020.8420},
+    eprint = {https://jamanetwork.com/journals/jama/articlepdf/2766672/jama_tolles_2020_gm_200010.pdf},
+}
+
 @book{knuth1984,
   author    = {Donald E. Knuth},
   title     = {The \TeXbook},
