Added citations for Ch 2

--- a/references.bib
+++ b/references.bib
@@ -14,6 +14,22 @@
     eprint = {https://jamanetwork.com/journals/jama/articlepdf/2766672/jama_tolles_2020_gm_200010.pdf},
 }
 
+@book{brauer2019,
+  title = {Mathematical models in epidemiology},
+  author = {Brauer, Fred and Castillo-Chavez, Carlos and Feng, Zhilan},
+  year = {2019},
+  publisher = {Springer}
+}
+
+@misc{dadlani2020,
+      title = {Deterministic Models in Epidemiology: From Modeling to Implementation}, 
+      author = {Aresh Dadlani and Richard O. Afolabi and Hyoyoung Jung and Khosrow Sohraby and Kiseon Kim},
+      year = {2020},
+      journal = {arXiv},
+      doi = {10.48550/arXiv.2004.04675},
+      url = {https://arxiv.org/abs/2004.04675}
+}
+
 @book{knuth1984,
   author    = {Donald E. Knuth},
   title     = {The \TeXbook},
