Professor N changes/Citations/C1 Changes

--- a/references.bib
+++ b/references.bib
@@ -30,74 +30,126 @@
       url = {https://arxiv.org/abs/2004.04675}
 }
 
-@book{knuth1984,
-  author    = {Donald E. Knuth},
-  title     = {The \TeXbook},
-  year      = {1984},
-  publisher = {Addison-Wesley},
-  address   = {Reading, MA}
+@article{reyne2022,
+title = {Principles of mathematical epidemiology and compartmental modelling application to COVID-19},
+journal = {Anaesthesia Critical Care & Pain Medicine},
+volume = {41},
+number = {1},
+pages = {101017},
+year = {2022},
+issn = {2352-5568},
+doi = {https://doi.org/10.1016/j.accpm.2021.101017},
+url = {https://www.sciencedirect.com/science/article/pii/S2352556821002241},
+author = {Bastien Reyné and Nicolas Saby and Mircea T. Sofonea},
 }
 
-@article{tufte2001,
-  author  = {Edward R. Tufte},
-  title   = {Visual Explanations},
-  journal = {Graphics Press},
-  year    = {2001},
-  volume  = {1},
-  number  = {1},
-  pages   = {1--88}
+@Article{gupta2021,
+author="Gupta, Agrayan K
+and Grannis, Shaun J
+and Kasthurirathne, Suranga N",
+title="Evaluation of a Parsimonious COVID-19 Outbreak Prediction Model: Heuristic Modeling Approach Using Publicly Available Data Sets",
+journal="J Med Internet Res",
+year="2021",
+month="Jul",
+day="26",
+volume="23",
+number="7",
+pages="e28812",
+abstract="Background: The COVID-19 pandemic has changed public health policies and human and community behaviors through lockdowns and mandates. Governments are rapidly evolving policies to increase hospital capacity and supply personal protective equipment and other equipment to mitigate disease spread in affected regions. Current models that predict COVID-19 case counts and spread are complex by nature and offer limited explainability and generalizability. This has highlighted the need for accurate and robust outbreak prediction models that balance model parsimony and performance. Objective: We sought to leverage readily accessible data sets extracted from multiple states to train and evaluate a parsimonious predictive model capable of identifying county-level risk of COVID-19 outbreaks on a day-to-day basis. Methods: Our modeling approach leveraged the following data inputs: COVID-19 case counts per county per day and county populations. We developed an outbreak gold standard across California, Indiana, and Iowa. The model utilized a per capita running 7-day sum of the case counts per county per day and the mean cumulative case count to develop baseline values. The model was trained with data recorded between March 1 and August 31, 2020, and tested on data recorded between September 1 and October 31, 2020. Results: The model reported sensitivities of 81{\%}, 92{\%}, and 90{\%} for California, Indiana, and Iowa, respectively. The precision in each state was above 85{\%} while specificity and accuracy scores were generally >95{\%}. Conclusions: Our parsimonious model provides a generalizable and simple alternative approach to outbreak prediction. This methodology can be applied to diverse regions to help state officials and hospitals with resource allocation and to guide risk management, community education, and mitigation strategies. ",
+issn="1438-8871",
+doi="10.2196/28812",
+url="https://www.jmir.org/2021/7/e28812",
+url="https://doi.org/10.2196/28812",
+url="http://www.ncbi.nlm.nih.gov/pubmed/34156964"
 }
 
-@misc{rmanual,
-  author       = {R Core Team},
-  title        = {R: A Language and Environment for Statistical Computing},
-  year         = {2024},
-  howpublished = {R Foundation for Statistical Computing, Vienna, Austria},
-  url          = {https://www.R-project.org/}
+@article{melikechi2022,
+  title={Limits of epidemic prediction using SIR models},
+  author={Melikechi, Omar and Young, Alexander L and Tang, Tao and Bowman, Trevor and Dunson, David and Johndrow, James},
+  journal={Journal of Mathematical Biology},
+  volume={85},
+  number={4},
+  pages={36},
+  year={2022},
+  publisher={Springer}
 }
 
-@inproceedings{he2016,
-  author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
-  title     = {Deep Residual Learning for Image Recognition},
-  booktitle = {Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-  year      = {2016},
-  pages     = {770--778}
+@article{tang2020,
+  title={A review of multi-compartment infectious disease models},
+  author={Tang, Lu and Zhou, Yiwang and Wang, Lili and Purkayastha, Soumik and Zhang, Leyao and He, Jie and Wang, Fei and Song, Peter X-K},
+  journal={International Statistical Review},
+  volume={88},
+  number={2},
+  pages={462--513},
+  year={2020},
+  publisher={Wiley Online Library}
 }
 
-@Book{R-bookdown,
-  title = {Bookdown: Authoring Books and Technical Documents with {R} Markdown},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  year = {2016},
-  isbn = {978-1138700109},
-  url = {https://bookdown.org/yihui/bookdown/},
+@article{wilta2022,
+title = {Generalized Susceptible–Exposed–Infectious–Recovered model and its contributing factors for analysing the death and recovery rates of the COVID-19 pandemic},
+journal = {Applied Soft Computing},
+volume = {123},
+pages = {108973},
+year = {2022},
+issn = {1568-4946},
+doi = {https://doi.org/10.1016/j.asoc.2022.108973},
+url = {https://www.sciencedirect.com/science/article/pii/S1568494622003106},
+author = {Felin Wilta and Allyson Li Chen Chong and Ganeshsree Selvachandran and Ketan Kotecha and Weiping Ding},
+abstract = {COVID-19 is a highly contagious disease that has infected over 136 million people worldwide with over 2.9 million deaths as of 11 April 2021. In March 2020, the WHO declared COVID-19 as a pandemic and countries began to implement measures to control the spread of the virus. The spread and the death rates of the virus displayed dramatic differences among countries globally, showing that there are several factors affecting its spread and mortality. By utilizing the cumulative number of cases from John Hopkins University, the recovery rate, death rate, and the number of active, recovered, and death cases were simulated to analyse the trends and patterns within the chosen countries. 10 countries from 3 different case severity categories (high cases, medium cases, and low cases) and 5 continents (Asia, North America, South America, Europe, and Oceania) were studied. A generalized SEIR model which considers control measures such as isolation, and preventive measures such as vaccination is applied in this study. This model is able to capture not only the dynamics between the states, but also the time evolution of the states by using the fourth-order-Runge–Kutta process. This study found no significant patterns in the countries under the same case severity category, suggesting that there are other factors contributing to the pattern in these countries. One of the factors influencing the pattern in each country is the population’s age. COVID-19 related deaths were found to be notably higher among older people, indicating that countries comprising of a larger proportion of older age groups have an increased risk of experiencing higher death rates. Tighter governmental control measures led to fewer infections and eventually reduced the number of death cases, while increasing the recovery rate, and early implementations were found to be far more effective in controlling the spread of the virus and produced better outcomes.}
 }
 
-@Article{xie2016,
-  author = {Yihui Xie},
-  title = {Dynamic Documents with R and knitr},
-  journal = {Journal of Statistical Software},
-  year = {2016},
-  volume = {67},
-  number = {1},
-  pages = {1--29},
-  doi = {10.18637/jss.v067.i01},
+@article{silal2017,
+author = {Sheetal Prakash Silal and Francesca Little and Karen I Barnes and Lisa Jane White},
+title = {Sensitivity to model structure: a comparison of compartmental models in epidemiology},
+journal = {Health Systems},
+volume = {5},
+number = {3},
+pages = {178--191},
+year = {2016},
+publisher = {Taylor \& Francis},
+doi = {10.1057/hs.2015.2},
+
+    note ={PMID: 36061953},
+
+
+URL = { 
+    
+        https://doi.org/10.1057/hs.2015.2
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1057/hs.2015.2
+    
+    
+
 }
 
-@Book{uncited_book,
-  title = {The Art of Scientific Computing},
-  author = {Albert Einstein and Marie Curie},
-  publisher = {Science Press},
-  year = {2020},
-  edition = {2},
-  note = {This is an uncited entry.},
 }
 
-@TechReport{uncited_report,
-  author = {Department of Statistics},
-  title = {Annual Data Analysis Report},
-  institution = {State University},
-  year = {2023},
-  type = {Internal Report},
-  note = {This is another uncited entry.},
+@article{smeden2020,
+  title={Reflection on modern methods: five myths about measurement error in epidemiological research},
+  author={Van Smeden, Maarten and Lash, Timothy L and Groenwold, Rolf HH},
+  journal={International journal of epidemiology},
+  volume={49},
+  number={1},
+  pages={338--347},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{brauer2017,
+title = {Mathematical epidemiology: Past, present, and future},
+journal = {Infectious Disease Modelling},
+volume = {2},
+number = {2},
+pages = {113-127},
+year = {2017},
+issn = {2468-0427},
+doi = {https://doi.org/10.1016/j.idm.2017.02.001},
+url = {https://www.sciencedirect.com/science/article/pii/S2468042716300367},
+author = {Fred Brauer},
+abstract = {We give a brief outline of some of the important aspects of the development of mathematical epidemiology.}
 }
