--- a/references.bib
+++ b/references.bib
@@ -153,3 +153,6 @@ url = {https://www.sciencedirect.com/science/article/pii/S2468042716300367},
 author = {Fred Brauer},
 abstract = {We give a brief outline of some of the important aspects of the development of mathematical epidemiology.}
 }
+
+@article{An introduction to compartmental modeling for the budding infectious disease modeler_2018, volume={5},  url={https://lettersinbiomath.org/manuscript/index.php/lib/article/view/77},  DOI={10.30707/LiB5.1Blackwood}, abstractNote={Mathematical models are ubiquitous in the study of the transmission dynamics of infectious diseases, In particular, the classic &amp;#039;susceptible-infectious-recovered&amp;#039; (SIR&amp;amp;lt;) paradigm provides a modeling framework that can be adapted to describe the core transmission dynamics of a range of human and wildlife diseases. These models provide an important tool for uncovering the mechanisms generating observed disease dynamics, evaluating potential control strategies, and predicting future outbreaks. With ongoing advances in computational tools as well as access to disease incidence data, the use of such models continues to increase. Here, we provide a basic introduction to disease modeling that is primarily intended for individuals who are new to developing&amp;amp;nbsp;SIR-type models. In particular, we highlight several common issues encountered when structuring and analyzing these models.}, number={1}, journal={Letters in Biomathematics}, year={2018}, month={Dec.}, pages={195–221} }
+
