Testing editing references

--- a/references.bib
+++ b/references.bib
@@ -38,7 +38,7 @@ number = {1},
 pages = {101017},
 year = {2022},
 issn = {2352-5568},
-doi = {https://doi.org/10.1016/j.accpm.2021.101017},
+doi = {10.1016/j.accpm.2021.101017},
 url = {https://www.sciencedirect.com/science/article/pii/S2352556821002241},
 author = {Bastien Reyné and Nicolas Saby and Mircea T. Sofonea},
 }
