--- a/references.bib
+++ b/references.bib
@@ -143,3 +143,11 @@ author = {Bastien Reyné and Nicolas Saby and Mircea T. Sofonea},
   doi = {10.30707/LiB5.1Blackwood},
   url = {https://lettersinbiomath.org/manuscript/index.php/lib/article/view/77}
 }
+
+@misc{long2020,
+      title = {Math Modeling: A Review of Mathematics}, 
+      author = {Andy Long},
+      year = {2020},
+      url= {https://www.nku.edu/~longa/classes/2020spring/mat375/mat375prep/SIR%20Model.html}
+}
+
