add effective reproduction number

--- a/references.bib
+++ b/references.bib
@@ -151,3 +151,18 @@ author = {Fred Brauer},
       url= {https://www.nku.edu/~longa/classes/2020spring/mat375/mat375prep/SIR%20Model.html}
 }
 
+@inbook{nishiura2009,
+  author       = {Nishiura, Hiroshi and Chowell, Gerardo},
+  editor       = {Chowell, Gerardo and Hyman, James M. and Bettencourt, Luís M. A. and Castillo-Chavez, Carlos},
+  title        = {The Effective Reproduction Number as a Prelude to Statistical Estimation of Time-Dependent Epidemic Trends},
+  booktitle    = {Mathematical and Statistical Estimation Approaches in Epidemiology},
+  year         = {2009},
+  publisher    = {Springer Netherlands},
+  address      = {Dordrecht},
+  pages        = {103--121},
+  isbn         = {978-90-481-2313-1},
+  doi          = {10.1007/978-90-481-2313-1_5},
+  url          = {https://doi.org/10.1007/978-90-481-2313-1_5}
+}
+
+
