--- a/references.bib
+++ b/references.bib
@@ -165,4 +165,15 @@ author = {Fred Brauer},
   url          = {https://doi.org/10.1007/978-90-481-2313-1_5}
 }
 
-
+@article{kalachev2022,
+title = {Revisiting classical SIR modelling in light of the COVID-19 pandemic},
+journal = {Infectious Disease Modelling},
+volume = {8},
+number = {1},
+pages = {72-83},
+year = {2023},
+issn = {2468-0427},
+doi = {https://doi.org/10.1016/j.idm.2022.12.002},
+url = {https://www.sciencedirect.com/science/article/pii/S2468042722001087},
+author = {Leonid Kalachev and Erin L. Landguth and Jon Graham},
+}
