--- a/references.bib
+++ b/references.bib
@@ -177,3 +177,16 @@ doi = {https://doi.org/10.1016/j.idm.2022.12.002},
 url = {https://www.sciencedirect.com/science/article/pii/S2468042722001087},
 author = {Leonid Kalachev and Erin L. Landguth and Jon Graham},
 }
+
+@article{ramponi2024,
+    author = {Ramponi, Alessandro and Tessitore, Maria Elisabetta},
+    title = {Optimal Social and Vaccination Control in the SVIR Epidemic Model},
+    journal = {Mathematics},
+    volume = {12},
+    number = {7},
+    pages = {933},
+    year = {2024},
+    issn = {2227-7390},
+    doi = {10.3390/math12070933},
+    url = {https://www.mdpi.com/2227-7390/12/7/933}
+}
