Removed Sample Chapter, Adjusted References

--- a/references.bib
+++ b/references.bib
@@ -244,7 +244,7 @@ doi = {10.1007/s11434-014-0499-8}
 }
 
 @article{McKee2024,
-  author  = {McKee, Clifton D. and Yu, Emma X. and Garcia, Andrés and Jackson, Jules and Koyuncu, Aybüke and Rose, Sophie and Azman, Andrew S. and Lobner, Katie and Sacks, Emma and Van Kerkhove, Maria D. and et al.},
+  author  = {McKee, Clifton D. and Yu, Emma X. and Garcia, Andrés and Jackson, Jules and Koyuncu, Aybüke and Rose, Sophie and Azman, Andrew S. and Lobner, Katie and Sacks, Emma and Van Kerkhove, Maria D. and others},
   title   = {Superspreading of SARS-CoV-2: a systematic review and meta-analysis of event attack rates and individual transmission patterns},
   journal = {Epidemiology and Infection},
   year    = {2024},
