Updated Ch 6, SAIR Model

--- a/references.bib
+++ b/references.bib
@@ -292,3 +292,13 @@ doi = {10.1007/s11434-014-0499-8}
    keywords = {Agent-Based, Epidemiology, Infectious Disease, Simulation, Model, Taxonomy},
    abstract = {Agent-based simulation modelling has been used in many epidemiological studies on infectious diseases. However, because agent based modelling is a field without any clear protocol for developing simulations the researcher is given a high amount of flexibility. This flexibility has led to many different forms of agent-based epidemiological simulations. In this paper we review the existing literature on agent-based epidemiological simulation models.  From our literature review we identify key similarities and differences in the exisiting simulations. We then use these similarities and differences to create a taxonomy of agent-based epidemiological models and show how the taxonomy can be used.},
 }		
+
+@article{ouyang2025,
+  title = {A deterministic SAIR model with vaccination and treatment: dynamical behaviors and control strategies}, 
+  author = {Ouyang, Y. and Zhang, S. and Xu, J.}, 
+  journal = {J. Appl. Math. Comput.},
+  volume = {71}, 
+  pages = {573–604},
+  year = {2025}, 
+  DOI = {10.1007/s12190-024-02238-6},
+}
