--- a/references.bib
+++ b/references.bib
@@ -302,3 +302,17 @@ doi = {10.1007/s11434-014-0499-8}
   year = {2025}, 
   DOI = {10.1007/s12190-024-02238-6},
 }
+
+@article{real1977,
+ ISSN = {00030147, 15375323},
+ URL = {http://www.jstor.org/stable/2460064},
+ author = {Leslie A. Real},
+ journal = {The American Naturalist},
+ number = {978},
+ pages = {289--300},
+ publisher = {[The University of Chicago Press, The American Society of Naturalists]},
+ title = {The Kinetics of Functional Response},
+ urldate = {2025-12-09},
+ volume = {111},
+ year = {1977}
+}
