--- a/references.bib
+++ b/references.bib
@@ -316,3 +316,17 @@ doi = {10.1007/s11434-014-0499-8}
  volume = {111},
  year = {1977}
 }
+
+@article{zhu2024,
+ ISSN = {2473-6988},
+ URL = {https://www.aimspress.com/article/doi/10.3934/math.2024170},
+ author = {Xinjie Zhu and Hua Liu and Xiaofen Lin and Qibin Zhang and Yumei Wei},
+ journal = {AIMS Mathematics},
+ number = {2},
+ pages = {3453--3482},
+ title = {Global stability and optimal vaccination control of SVIR models},
+ volume = {9},
+ year = {2024},
+ doi = {10.3934/math.2024170},
+ keywords = {vaccinations, bifurcation analysis, global stability, optimized vaccination control, sensitivity analysis}
+}
