Edits to Ch 6: Increase plot size, Proofreading

--- a/references.bib
+++ b/references.bib
@@ -88,7 +88,7 @@ volume = {123},
 pages = {108973},
 year = {2022},
 issn = {1568-4946},
-doi = {doi.org/10.1016/j.asoc.2022.108973},
+doi = {10.1016/j.asoc.2022.108973},
 url = {https://www.sciencedirect.com/science/article/pii/S1568494622003106},
 author = {Felin Wilta and Allyson Li Chen Chong and Ganeshsree Selvachandran and Ketan Kotecha and Weiping Ding},
 }
@@ -173,7 +173,7 @@ number = {1},
 pages = {72-83},
 year = {2023},
 issn = {2468-0427},
-doi = {https://doi.org/10.1016/j.idm.2022.12.002},
+doi = {10.1016/j.idm.2022.12.002},
 url = {https://www.sciencedirect.com/science/article/pii/S2468042722001087},
 author = {Leonid Kalachev and Erin L. Landguth and Jon Graham},
 }
