--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,8 @@ github-repo: nishanmudalige/STA258
 description: "Bookdown hosted on github using bookdown::gitbook."
 # --- CITATION CONFIGURATION ---
 bibliography: references.bib      # 1. Location of bibliography (.bib) file
-csl: vancouver.csl                # 2. Use a CSL for bibliogpahy style (Optional) (e.g., vancouver for numbered, ieee)
+# csl: vancouver.csl                # 2. Use a CSL for bibliogpahy style (Optional) (e.g., vancouver for numbered, ieee)
+csl: vancouver_ordered.csl        # 2. Custom CSL for ordered bibliogpahy style
 link-citations: yes
 nocite: '@*'                      # 3. CRITICAL: Include ALL references, even uncited ones
 header-includes: 
