--- a/references.bib
+++ b/references.bib
@@ -330,3 +330,24 @@ doi = {10.1007/s11434-014-0499-8}
  doi = {10.3934/math.2024170},
  keywords = {vaccinations, bifurcation analysis, global stability, optimized vaccination control, sensitivity analysis}
 }
+
+@article{kadri2025,
+  title={A comparative study of deterministic and stochastic computational modeling approaches for analyzing and optimizing COVID-19 control},
+  author={Kadri, Abdeldjalil and Boudaoui, Ahmed and Ullah, Saif and Asiri, Mohammed and Saqib, Abdul Baseer and Riaz, Muhammad Bilal},
+  journal={Scientific Reports},
+  volume={15},
+  number={1},
+  pages={11710},
+  year={2025},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{sunila2024,
+  title={Visualizing Scholarly Trends in Stochastic Models for Disease Prediction},
+  author={Sunila, V and Kurian, Jais and Mathew, Liny Mariam and Mathew, Pratheesh and John, Dary and Joseph, Jeena and KURIAN, JAIS and MATHEW, PRATHEESH},
+  journal={Cureus},
+  volume={16},
+  number={9},
+  year={2024},
+  publisher={Cureus}
+}
